--- a/index.css
+++ b/index.css
@@ -664,7 +664,7 @@ a {
   display:none;
 }
 .category_box .room ul {
-  width:690px;
+  width:950px;
   height:100%;
   margin-left:40px;
 }
@@ -704,11 +704,23 @@ a {
 .category_box .room ul li:nth-child(3) .item_bg {
   background-image:url(images/select/room/room3.png);
 }
+.category_box .room ul li:nth-child(4) .item_bg {
+  background-image:url(images/select/room/room4.png);
+}
+.category_box .room ul li:nth-child(5) .item_bg {
+  background-image:url(images/select/room/room5.png);
+}
+.category_box .room ul li:nth-child(6) .item_bg {
+  background-image:url(images/select/room/room6.png);
+}
+.category_box .room ul li:nth-child(7) .item_bg {
+  background-image:url(images/select/room/room7.png);
+}
 .category_box .others {
   display:none;
 }
 .category_box .others ul {
-  width:3680px;
+  width:3975px;
   height:100%;
   margin-left:40px;
 }
@@ -787,6 +799,48 @@ a {
 .category_box .others ul li:nth-child(16) .item_bg {
   background-image:url(images/select/others/3-5.png);
 }
+.category_box .others ul li:nth-child(17) .item_bg {
+  background-image:url(images/select/others/4-0.png);
+}
+.category_box .others ul li:nth-child(18) .item_bg {
+  background-image:url(images/select/others/4-1.png);
+}
+.category_box .others ul li:nth-child(19) .item_bg {
+  background-image:url(images/select/others/4-2.png);
+}
+.category_box .others ul li:nth-child(20) .item_bg {
+  background-image:url(images/select/others/4-3.png);
+}
+.category_box .others ul li:nth-child(21) .item_bg {
+  background-image:url(images/select/others/4-4.png);
+}
+.category_box .others ul li:nth-child(22) .item_bg {
+  background-image:url(images/select/others/4-5.png);
+}
+.category_box .others ul li:nth-child(23) .item_bg {
+  background-image:url(images/select/others/4-6.png);
+}
+.category_box .others ul li:nth-child(24) .item_bg {
+  background-image:url(images/select/others/4-7.png);
+}
+.category_box .others ul li:nth-child(25) .item_bg {
+  background-image:url(images/select/others/4-8.png);
+}
+.category_box .others ul li:nth-child(26) .item_bg {
+  background-image:url(images/select/others/4-9.png);
+}
+.category_box .others ul li:nth-child(27) .item_bg {
+  background-image:url(images/select/others/5-0.png);
+}
+.category_box .others ul li:nth-child(28) .item_bg {
+  background-image:url(images/select/others/5-1.png);
+}
+.category_box .others ul li:nth-child(29) .item_bg {
+  background-image:url(images/select/others/5-2.png);
+}
+.category_box .others ul li:nth-child(30) .item_bg {
+  background-image:url(images/select/others/5-3.png);
+}
 
 .category_box .flag {
   display:none;
@@ -858,16 +912,18 @@ a {
   width:100%;
   height:100%;
   background:#fff;
-  position:absolute;
-  top:0;
+/*  position:absolute;
+  top:0;*/
   z-index:100;
 }
 .welcome_layer .brand {
-  position:absolute;
-  top:50px;
-  left:50px;
+  padding-top: 50px;
+}
+.welcome_layer .brand i {
+  display: block;
   width:317px;
   height:38px;
+  margin: 0 auto;
   background:url(images/brand.png) no-repeat;
 }
 .welcome_layer .wel_main_wraper {
@@ -883,7 +939,7 @@ a {
   display: table;
   position: absolute;
   top: 50%;
-  margin-top: -310px;
+  margin-top: -345px;
 }
 .welcome_layer .wel_main_wraper .wel_main .table-cell {
   display: table-cell;
@@ -903,7 +959,7 @@ a {
 
 .welcome_layer .wel_main_wraper .sofa_ball {
   font-size: 0;
-  width: 280px;
+  text-align: center;
 }
 
 .welcome_layer .wel_main_wraper .sofa_ball img {
@@ -923,12 +979,16 @@ a {
   height:72px;
   background:url(images/sofa.png) no-repeat;
 } */
-
+.welcome_layer .wel_main_wraper .text {
+  margin: 0 auto;
+  width:242px;
+  height:430px;
+}
 .welcome_layer .wel_main_wraper .text i {
   display: inline-block;
-  background:url(images/text.png) no-repeat;
-  width:174px;
-  height:613px;
+  background:url(images/text2.png) no-repeat;
+  width:100%;
+  height:100%;
 }
 .welcome_layer .start {
   width:267px;
@@ -938,6 +998,95 @@ a {
   left:50%;
   margin-left: -133px;
   bottom:85px;
+}
+
+.welcome_layer.first_page {
+  background: #bacc74 !important;
+}
+.welcome_layer.first_page .wel_main_wraper {
+  top: 74px;
+  bottom: 70px;
+}
+.welcome_layer.first_page .brand i {
+  width: 194px;
+  height: 24px;
+  background: url(images/white-brand.png) no-repeat;
+}
+
+.welcome_layer.first_page .wel_main_wraper .wel_main {
+  margin-top: -340px;
+}
+
+.welcome_layer.first_page .wel_main_wraper {
+  background: #bacc74;
+}
+
+.welcome_layer.first_page .bottom-text {
+  bottom: 0px;
+  text-align: center;
+  font-size: 20px;
+  color: #758535;
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  background: #bacc74;
+}
+
+.first_page .center_img {
+  text-align: center;
+  font-size: 0;
+}
+.first_page .slide_up {
+  position: relative;
+  width: 452px;
+  height: 258px;
+  overflow: hidden;
+  margin: 0 auto;
+} 
+.first_page .slide_up i{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  z-index: 1;
+}
+.first_page .slide_up span{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  overflow: hidden;
+  z-index: 2;
+}
+.first_page .slide_up b {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: #ff4050;
+  transform: translateY(100%);
+}
+
+.first_page.loaded .slide_up b {
+  transform: translateY(0);
+  transition: transform 3s;
+}
+.first_page .slide_up .home1{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 3;
+}
+.first_page .center_img .home2{
+  width: 448px;
+  height: 183px;
+}
+.first_page .center_img .home3{
+  width: 421px;
+  height: 121px;
+  margin-top: 170px;
 }
 
 @keyframes icon_bg {
